<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="GuestInterface.PaginaPrincipalaAfectiuniAbdomen"
    android:background="@drawable/fundalpaginaprincipalaafectiuniabdomen">

    <Button
        android:id="@+id/ButonAbdomenUmflat"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiuneabdomen1"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonDurereAbdominalaAdulti"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiuneabdomen2"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonDurereInSarcina"

        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiuneabdomen3"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonConstipatie"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiuneabdomen4"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonDiaree"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiuneabdomen5"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonVarsaturi"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiuneabdomen6"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonVarsaturiCuSange"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiuneabdomen7"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>