<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaSelectareTipContUtilizator"
    android:background="@drawable/fundalselectaretipcont">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137"
        tools:layout_editor_absoluteX="0dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:fontFamily="@font/smooch"
        android:textColor="#000000"
        android:textSize="60sp">
    </TextView>

    <Button
        android:id="@+id/ButonCont"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/text_buton_cont"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonGuest"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/buton_guest"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/ButonSchimbareLimba"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/buton_language"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>