<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="GuestInterface.PaginaPrincipalaAfectiuniSani"
    android:background="@drawable/fundalpaginaprincipalaafectiunisani">

    <Button
        android:id="@+id/ButonEnlargement"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiunisani1"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonLumps"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiunisani2"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonBreastPain"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiunisani3"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>