<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="GuestInterface.PaginaPrincipalaAfectiuniCerebral"
    android:background="@drawable/fundalpaginaprincipalaafectiunicerebral">

    <Button
        android:id="@+id/ButonConfuzie"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiunicerebrale1"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonAmeteala"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiunicerebrale2"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ButonDurereDeCap"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:background="@drawable/buton_pagini_afectiuni"
        android:text="@string/afectiunicerebrale3"
        android:textColor="#000000"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:iconTint="#ffb7c8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654"
        app:strokeColor="#EDE7F6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>